# python-project-52

./: .gitignore  README.md  get-pip.py  pyproject.toml  ruff.toml
.github/workflows/: my_workflow.yml
task_manager/: asgi.py  settings.py  wsgi.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: layout.html
task_manager/templates/labels/: create.html  delete.html  index.html
task_manager/templates/users/: create.html
task_manager/users/migrations/: 0001_initial.py
